@@ -3,6 +3,7 @@ title            => The First Topic
 author_name       => David
 author_email_address => david@loudthinking.com
 written_on        => 2003-07-16 15:28
+bonus_time       => 12:13:14
 last_read        => 2004-04-15
 content          => Have a nice day
 approved => 0
